--- a/paper/sections/checklist.tex
+++ b/paper/sections/checklist.tex
@@ -35,7 +35,7 @@ IMPORTANT, please:
 \item {\bf Claims}
 \item[] Question: Do the main claims made in the abstract and introduction accurately reflect the paper's contributions and scope?
 \item[] Answer: \answerYes{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: \justificationTODO{}
+\item[] Justification: We tried our best to do so. 
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the abstract and introduction do not include the claims made in the paper.
@@ -47,7 +47,7 @@ IMPORTANT, please:
 \item {\bf Limitations}
 \item[] Question: Does the paper discuss the limitations of the work performed by the authors?
 \item[] Answer: \answerYes{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: See \Cref{sec:conclusion}.
+\item[] Justification: See the paragraph dedicated to limitations in \Cref{sec:conclusion}.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the paper has no limitation while the answer No means that the paper has limitations, but those are not discussed in the paper.
@@ -156,8 +156,8 @@ IMPORTANT, please:
 
 \item {\bf Code Of Ethics}
 \item[] Question: Does the research conducted in the paper conform, in every respect, with the NeurIPS Code of Ethics \url{https://neurips.cc/public/EthicsGuidelines}?
-\item[] Answer: \answerYes{} We have read the Code of Ethics.  % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: \justificationTODO{}
+\item[] Answer: \answerYes{}   % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
+\item[] Justification: We have read the Code of Ethics and concluded that our submission conforms.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the authors have not reviewed the NeurIPS Code of Ethics.
@@ -168,8 +168,9 @@ IMPORTANT, please:
 
 \item {\bf Broader Impacts}
 \item[] Question: Does the paper discuss both potential positive societal impacts and negative societal impacts of the work performed?
-\item[] Answer: \answerTODO{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: \justificationTODO{}
+\item[] Answer: \answerNo{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
+\item[] Justification: %\justificationTODO{}
+It is the goal of this paper to improve the accuracy of neural-network-based PDE solvers. As the numerical solution of PDEs is a classic topic in applied mathematics and engineering, we believe there is no dedicated discussion of the societal impacts. 
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that there is no societal impact of the work performed.
