--- a/paper/sections/heat_equation.tex
+++ b/paper/sections/heat_equation.tex
@@ -1,28 +1,26 @@
-Consider the $D$-dimensional heat equation
+Consider the $D$-dimensional\todo{Low priority: lower case $d$ or upper case $D$? The number of trainable weights is already $D$.} homogeneous heat equation
 \begin{align*}
   \partial_{t} u(t, \vx)
   -
-  \frac{1}{4} \Delta_{\vx} u(t, \vx)
+  \kappa \Delta_{\vx} u(t, \vx)
   =
   0
 \end{align*}
-where $\vx \in \Omega \subseteq \sR^D$ and $t \in \mathrm{T} \subseteq \sR$.
-In this case, our neural network processes a $D+1$-dimensional vector $\tilde{\vx} =
+where $\vx \in \Omega \subseteq \sR^D$, $t \in \mathrm{T} \subseteq \sR$ is a time interval, and $\kappa >0$ denotes the heat conductivity. In this case, our neural network processes a $D+1$-dimensional vector $\tilde{\vx} =
 \begin{pmatrix} t \\ \vx \end{pmatrix}$ and we can re-write the heat equation as
 \begin{align*}
   \partial_{[\tilde{\vx}]_1} u(\tilde{\vx})
   -
-  \frac{1}{4} \sum_{d=2}^{D+1} \Delta_{[\tilde{\vx}]_d} u(\tilde{\vx})
+  \kappa \sum_{d=2}^{D+1} \Delta_{[\tilde{\vx}]_d} u(\tilde{\vx})
   =
   0\,.
 \end{align*}
-In the following, we consider the unit time interval $\mathrm{T} = [0;1]$ and the unit square $\Omega = [0;1]^D$.
-There are two types of conditions we want to enforce on the heat equation's solution: initial conditions and boundary conditions.
-As initial conditions, we use $u(0, \vx) = \prod_{d=1}^D \sin(\pi [\vx_d])$ for $\vx \in \Omega$.
-For boundary conditions, we use $u(t, \vx) = 0$ for $t, \vx \in \mathrm{T} \times \partial\Omega$.
-The solution to this heat equation is
+In the following, we consider the unit time interval $\mathrm{T} = [0;1]$, the unit square $\Omega = [0;1]^D$ and set $\kappa = \nicefrac{1}{4}$. There are two types of constraints we need to enforce on the heat equation in order to obtain unique solutions: initial conditions and boundary conditions. As our framework for the KFAC approximation assumes only two terms in the loss function, we combine the contributions from the boundary and initial values into one term. To make this more precise consider the following example solution of the heat equation, which will be used later on as well.
+As initial conditions, we use $u_0(x) = u(0, \vx) = \prod_{d=1}^D \sin(\pi [\vx_d])$ for $\vx \in \Omega$.
+For boundary conditions, we use $g(t, \vx) = 0$ for $t, \vx \in \mathrm{T} \times \partial\Omega$.
+The manufactured solution thus is
 \begin{align*}
-  u_{\star}(t, \vx)
+  u^{\star}(t, \vx)
   =
   \exp \left(-\frac{\pi^2 D t}{4} \right)
   \prod_{d=1}^D \sin(\pi [\vx_d])\,.
@@ -45,7 +43,7 @@ The PINN loss for this problem consists of three terms
     \left\lVert
     u_{\vtheta}(\tilde{\vx}_n^{\partial\Omega})
     -
-    u(\tilde{\vx}_n^{\partial\Omega})
+    g(\tilde{\vx}_n^{\partial\Omega})
     \right\rVert^2_2
   \\
   &+
@@ -54,7 +52,7 @@ The PINN loss for this problem consists of three terms
     \left\lVert
     u_{\vtheta}(0, \vx_n^0)
     -
-    u(0, \vx_n^0)
+    u_0( \vx_n^0)
     \right\rVert^2_2
 \end{align*}
 with $\tilde{\vx}_n^{\Omega} \sim \mathrm{T} \times \Omega$, and $\tilde{\vx}_n^{\partial\Omega} \sim \mathrm{T} \times \partial\Omega$, and $\vx_n^0 \sim \{0\} \times \Omega$.
@@ -84,8 +82,8 @@ Assuming $N_{\partial \Omega} = N_0 = \nicefrac{N_{\text{cond}}}{2}$ without los
     \right\rVert^2_2
     }_{\gL_{\text{cond}}(\vtheta)}
 \end{align*}
-with domain inputs $\tilde{\vx}_n^{\Omega} \sim \mathrm{T} \times \Omega$ and targets $y_n^{\Omega} = 0$, condition targets $y_n^{\text{cond}} = u(\tilde{\vx}_n^{\text{cond}})$ with initial inputs $\tilde{\vx}_n^{\text{cond}} \sim \{0\} \times \Omega$ for $n = 1, \dots, \nicefrac{N_{\text{cond}}}{2}$ and boundary inputs $\tilde{\vx}_n^{\partial\Omega} \sim \mathrm{T} \times \partial\Omega$ for $n = \nicefrac{N_{\text{cond}}}{2}+1, \dots, N_{\text{cond}}$.
-The boundary and condition loss are of exactly same structure as the loss we discussed for the Poisson equation.
+with domain inputs $\tilde{\vx}_n^{\Omega} \sim \mathrm{T} \times \Omega$ and targets $y_n^{\Omega} = 0$, boundary and initial condition targets $y_n^{\text{cond}} = u(\tilde{\vx}_n^{\text{cond}})$ with initial inputs $\tilde{\vx}_n^{\text{cond}} \sim \{0\} \times \Omega$ for $n = 1, \dots, \nicefrac{N_{\text{cond}}}{2}$ and boundary inputs $\tilde{\vx}_n^{\partial\Omega} \sim \mathrm{T} \times \partial\Omega$ for $n = \nicefrac{N_{\text{cond}}}{2}+1, \dots, N_{\text{cond}}$.
+The boundary and initial condition loss are of exactly same structure as the loss we discussed for the Poisson equation.
 
 %%% Local Variables:
 %%% mode: latex
