--- a/paper/sections/background_pinns.tex
+++ b/paper/sections/background_pinns.tex
@@ -39,7 +39,7 @@ The nonlinear layers are given by $\vz\mapsto \sigma(\vz)$ componentwise for a (
 %    \item PINNs are one of the most promising approaches to neural network based PDE solvers
 %    \item
 %\end{itemize}
-Let us consider a domain $\Omega\subseteq\mathbb R^d$ and the Poisson equation %and how to write the Gramian/Fisher as the product of a Jacobian and its transpose, see equation \eqref{eq:Jacobian_Fischer}.
+Let us consider a domain $\Omega\subseteq\mathbb R^d$ and the partial differential equation %and how to write the Gramian/Fisher as the product of a Jacobian and its transpose, see equation \eqref{eq:Jacobian_Fischer}.
 %Is this what you were after Felix?
 %I think it differs from the standard setting in the sense that suddenly the Laplacian shows up.
 %It can also be used to derive a matrix-free version of the energy natural gradient descent, like done in Hessian-free optimization.
@@ -48,13 +48,13 @@ Let us consider a domain $\Omega\subseteq\mathbb R^d$ and the Poisson equation %
   -\mathcal{L} u & = f \quad \text{in }\Omega \\
   u & = g \quad \text{on }\partial\Omega
 \end{align*}
-where $f\in L^2(\Omega)$ and $g\in H^{3/2}(\partial\Omega)$ are some given right hand side and boundary values.
-Here, $\mathcal{L}$ denotes a differential operator, e.g., the \emph{Laplacian} $\mathcal{L} u = \Delta u = \sum_i \partial_{\vx_i}^2 u$.
+where $f\in L^2(\Omega)$ and $g\in C^2(\Omega)\cap C(\overline{\Omega})$ is a twice continuously differentiable function.
+Here, $\mathcal{L}$ denotes a differential operator, e.g., the \emph{Laplacian} $\mathcal{L} u = \Delta u = \sum_i \partial_{x_i}^2 u$.
 %Let us consider the function space energy
 %  \[ E(u) = \frac{1}{2} \int_\Omega (\Delta u + f)^2 \mathrm dx + \frac12 \int_{\partial\Omega} (u-g)^2 \mathrm ds, \]
 %which is designed such that $u$ is a solution of~\eqref{eq:PE} if and only if $E(u)=0$.
 %Hence, we discretize the integral and use the following loss function t
-In \emph{Physics-informed neural networks (PINNs)}, we parametrize $u$ using a neural network and train its parameters $\vtheta$ to minimize the loss s
+In \emph{Physics-informed neural networks (PINNs)}, we parametrize $u$ using a neural network and train its parameters $\vtheta$ to minimize the loss 
   %\[ L(\theta) \coloneqq E(u_\theta) = \frac{1}{2} \int_\Omega (\Delta u_\theta + f)^2 \mathrm dx + \frac12 \int_{\partial\Omega} (u_\theta-g)^2 \mathrm ds. \]
 %Indeed, one can show that $L$ controls the error, i.e., $\lVert u_\theta - u^\star \rVert_{H^{1/2}(\Omega)} \le c_{\operatorname{reg}} \sqrt{L(\theta)}$, where $c_{\operatorname{reg}}$ denotes the regularity constant of the PDE, see~\cite{?}.
 %In practice, we have to discretize the integrals in the PINN loss, and obtain the empirical loss function %with discretized integrals, is
@@ -68,7 +68,8 @@ In \emph{Physics-informed neural networks (PINNs)}, we parametrize $u$ using a n
   %=
     \underbrace{\frac{1}{2N_\Omega} \sum_{i=1}^{N_\Omega} (\mathcal{L} u_\vtheta(\vx_i) + f(\vx_i))^2}_{\eqqcolon L_\Omega(\vtheta)} + \underbrace{\frac{1}{2N_{\partial\Omega}}\sum_{i=1}^{N_{\partial\Omega}} ( u_\vtheta(\vx^b_i) - g(\vx^b_i))^2}_{\eqqcolon L_{\partial\Omega}(\vtheta)},
 \end{align}
-where $(\vx_n)_{n=1}^{N_\Omega}$ and  $(\vx^b_n)_{n=1}^{N_{\partial\Omega}}$ are points in the interior and on the boundary of $\Omega$ respectively.
+where $(\vx_n)_{n=1}^{N_\Omega}$ and  $(\vx^b_n)_{n=1}^{N_{\partial\Omega}}$ are points in the interior and on the boundary of $\Omega$ respectively.\footnote{Adding additional information, including measurement data can be included via a regression loss that can be treated analogously to the boundary loss.} 
+
 %Whereas we choose the Poisson equation for the sake of simplicity, this approach can easily be generalized to other PDEs. 
 %The Kronecker-factored approximations derived in~\Cref{?} are formulated for general PDEs. 
 %The number and choice of the points can be controlled by the practitioner, where different sampling strategies have been developed~\cite[text]{keylist}.
